--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,302 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'mdb-angular-ui-kit/assets/scss/mdb.scss';
+@import './_cover.scss';
+
+body{
+    margin: 0;
+    padding: 0;
+    font-size: 62.5%;
+}
+
+    @font-face {
+        font-family: 'Handelson-One';
+        src: url('/fonts/Handelson-One.otf') format('opentype');
+        font-weight: normal;
+        font-style: normal;
+    }
+    
+    .mi-clase {
+        font-family: 'MiFuenteOTF';
+    }
+:root{
+    --cover-content-padding-desktop: 10px;
+    --cover-content-padding-mobile: 5px;
+    --cover-height-desktop: 650px;
+    --cover-height-tablet: 450px;
+    --cover-height-mobile: 350px;
+    // color
+    --background-color: #eaeaea;
+    --title-color:#cf142b;
+    --primary-color:#fca311;
+    --second-color:#14213d;
+    --textImage-color:#ffffff;
+    --textp-color:#eaeaea;
+}
+
+/* inicilo logo del menu */
+#logo{
+    height: 100px;
+    width: 300px;	
+    margin-right: 20px;
+    flex-direction: column;
+    flex: 1;
+    object-fit: contain;
+    object-position: left;
+    @media  (max-width: 480px){
+        // height: 150px;
+        width: 150px;
+        margin-left: 30px;
+    }
+    @media  (max-width: 768px){
+        // height: 150px;
+        width: 250px;
+        margin-left: 30px;
+    }
+}
+
+#main_title{
+    font-family: 'Handelson-One';
+    font-size: 800%;
+    text-align: center;
+    color: var(--title-color);
+}
+
+
+
+
+/* fin del logo meno */
+
+/* inicio de los banners de cada pagina  */
+#subtitle{
+    font-size: 2.0rem;
+    margin-top: 2.0rem;
+    font-weight: bold;
+    font-style: italic;
+    color: #cf142b;
+    @media (max-width: 768px) {
+        font-size: 1.5rem;
+        margin-top: 2.0rem;
+        font-weight: bold;
+        font-style: italic;
+    }
+
+}
+
+#menuBarTitle{
+    color: var(--background2-color);
+    font-size: 1.0rem;
+    font-weight: bold;
+    margin-top: 1.0rem;
+}
+
+#tab_title{
+    font-family: 'MiFuenteOTF'!important;
+    font-size: 150%;
+    // interlinmeado
+    line-height: 1.0;
+    font-weight: bold;
+    margin-top: 2.0rem;
+    text-align: center;
+    @media (max-width: 768px) {
+        font-size: 150%;
+        line-height: 1.0;
+        font-weight: bold;
+        margin-top: 2.0rem;
+        margin-bottom: 1.0rem;
+        text-align: center;
+    }
+}
+
+.mat-mdc-tab-header-pagination-chevron {
+    border-style: solid;
+    border-width: 2px 2px 0 0;
+    height: 8px;
+    width: 8px;
+    border-color: var(--background) !important;
+}
+
+.menu {
+    width: 100%; 
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.filter-buttons {
+    display: flex;
+    justify-content: center; 
+    gap: 0px;
+    padding: 10px 0;
+}
+
+.filter-buttons button {
+    margin: 0;
+    padding: 10px 20px;
+    cursor: pointer;
+    border: none;
+    background-color: #007bff;
+    color: white;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.filter-buttons button:hover {
+    background-color: #0056b3;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(250px, 1fr));
+    @media(max-width: 768px) {
+        
+    }
+    @media(max-width: 480px) {
+        grid-template-columns: repeat(1, minmax(250px, 1fr));
+        .filter-buttons {
+            display: flex;
+            justify-content: center; 
+            gap: 0px;
+            padding: 10px 10px;
+        }
+        .filter-buttons button {
+            margin: 0;
+            padding: 10px 10px;
+            cursor: pointer;
+            border: none;
+            background-color: #007bff;
+            color: white;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+    }
+    gap: 20px;
+    justify-content: center;
+    width: 100%;
+    margin: 0 auto;
+}
+.photo img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 8px;
+}
+.photo {
+    position: relative;
+    overflow: hidden;:hover{
+        transform: scale(1.5);
+        transition: transform 0.5s;
+        filter: brightness(1.2);
+    }
+}
+.tag {
+    
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 8px 12px;
+    border-radius: 5px;
+    font-size: 1em;
+    z-index: 10; 
+} 
+
+#section5 {
+    margin-top: 3%;
+    padding-bottom: 7%;
+    height: 550px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--second-color); /* Color de fondo */
+    color: white;
+  }
+  button{
+    align-items: center;
+  }
+  .testimonial-carousel {
+    width: 80%;
+    .mat-tab-header {
+      display: none; /* Ocultar pestañas */
+    }
+  }
+  
+  .testimonial-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .avatar {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid white;
+    margin-bottom: 10px;
+  }
+  
+  .testimonial-content {
+    text-align: center;
+    h3 {
+      font-size: 18px;
+      font-weight: bold;
+    }
+    p {
+      font-size: 16px;
+      line-height: 1.5;
+    }
+}
+#section6 {
+    margin: 2%;
+    padding: 2%;
+    display: grid; /* Usamos Grid Layout */
+    grid-template-columns: repeat(2, 1fr); /* Dos columnas en pantallas grandes */
+    gap: 20px; /* Espaciado entre las columnas */
+  
+    .card-content  {
+      position: relative;
+      overflow: hidden;
+      border-radius: 10px;
+      width: 100%;
+      .video{
+        width: 100%;
+        height: 450px;
+      }
+      img {
+        width: 100%;
+        height: 450px;
+        object-fit: cover;
+        border-radius: 10px;
+        
+      transition: transform 0.6s ease, filter 0.54s ease;
+  
+      &:hover {
+        transform: scale(1.05); /* Efecto hover */
+        filter: brightness(1.2); /* Más brillo */
+      }
+  
+      }
+    }
+  
+    /* En pantallas pequeñas, cambiamos a una columna */
+    @media (max-width: 768px) {
+      grid-template-columns: repeat(1, 1fr); /* Una columna */
+    }
+  
+    /* Aseguramos el comportamiento en pantallas extra pequeñas */
+    @media (max-width: 480px) {
+      grid-template-columns: repeat(1, 1fr); /* Una columna */
+    }
+    p{
+        
+        line-height: 2.5rem;
+        color: var(--textb-color);
+        font-weight: 500;
+        margin-top: 5%;
+        font-size: 1.5rem;
+        // vieneta
+        // list-style-type: disc;
+        margin-left: 20px;
+        text-align: justify;
+      }
+  }
