adding changes on dir

--- a/src/app/appbar/appbar.component.html
+++ b/src/app/appbar/appbar.component.html
@@ -2,7 +2,7 @@
     <p-menubar [model]="items">
         <ng-template pTemplate="start">
             <!-- logo img -->
-            <img id="logo" src="/img/logo.png" alt="logo" class="logo" />
+            <img id="logo" src="img/logo.png" alt="logo" class="logo" />
         </ng-template>
         <ng-template pTemplate="item" let-item let-root="root">
             <!-- Enlace adaptado para usar routerLink -->
