--- a/src/app/classes/classes.component.html
+++ b/src/app/classes/classes.component.html
@@ -1,5 +1,5 @@
 <mat-card class="cover-card">
-    <img mat-card-image src="/img/inPersonClass.jpg" alt="Imagen de portada" />
+    <img mat-card-image src="img/inPersonClass.jpg" alt="Imagen de portada" />
     <mat-card-content>
         <h1>Classes</h1>
     </mat-card-content>
