--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <mat-card class="cover-card">
-    <img mat-card-image src="/img/Home.jpg" alt="Imagen de portada" />
+    <img mat-card-image src="img/Home.jpg" alt="Imagen de portada" />
     <mat-card-content>
       <h1>Fulbright-Hays in Bolivia</h1>
     </mat-card-content>
@@ -9,7 +9,7 @@
 </mat-card-title>  
 <mat-card id="section1">
   <mat-card-content class="card-content" >
-    <img mat-card-image src="/img/Home_OleMiss.jpg" alt="Ole Miss" style="margin-top: 0;" />
+    <img mat-card-image src="img/Home_OleMiss.jpg" alt="Ole Miss" style="margin-top: 0;" />
     <mat-list>
       <p>
           "A rich, hands-on immersion in Bolivia’s diverse traditions, landscapes, and communities."
@@ -17,7 +17,7 @@
     </mat-list>
   </mat-card-content>
   <mat-card-content class="card-content">
-    <img mat-card-image src="/img/Dakar_home.jpg" alt="Dakar_Uyuni Salt" style="margin-top: 16px;" />
+    <img mat-card-image src="img/Dakar_home.jpg" alt="Dakar_Uyuni Salt" style="margin-top: 16px;" />
     <mat-list>
       <p>
           "An unforgettable experience of learning and cultural exchange"
@@ -32,7 +32,7 @@
 
 <mat-card id="section2">
   <mat-card-content class="card-content" >
-      <iframe class="video" src="/video/intro_home.mp4"
+      <iframe class="video" src="video/intro_home.mp4"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
@@ -150,7 +150,7 @@
 </mat-card-title>
 <mat-card id="section6">
       <mat-card-content class="card-content" >
-      <iframe class="video" src="/video/intro_home.mp4"
+      <iframe class="video" src="video/intro_home.mp4"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
