--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -1,5 +1,5 @@
 <mat-card class="cover-card">
-    <img mat-card-image src="/img/paraninfo_ucb.jpg" alt="Imagen de portada" />
+    <img mat-card-image src="img/paraninfo_ucb.jpg" alt="Imagen de portada" />
     <mat-card-content>
       <h1>Experience</h1>
     </mat-card-content>
