--- a/src/app/virtual/virtual.component.html
+++ b/src/app/virtual/virtual.component.html
@@ -1,5 +1,5 @@
 <mat-card class="cover-card">
-    <img mat-card-image src="/img/virtualClasses.jpg" alt="Imagen de portada" />
+    <img mat-card-image src="img/virtualClasses.jpg" alt="Imagen de portada" />
     <mat-card-content>
         <h1>Remote Sessions</h1>
     </mat-card-content>
@@ -81,10 +81,10 @@
         <mat-card-title id="main_title">
             Session 1
         </mat-card-title>
-        <img class="logos"src="/img/logo_ucb.png" alt="Imagen de portada" style="width: 500px; height: 190px; " />
+        <img class="logos"src="img/logo_ucb.png" alt="Imagen de portada" style="width: 500px; height: 190px; " />
         <br>
         <br>
-        <img class="logos" src="/img/logo.png" alt="Imagen de portada" style="width: 490px; height: 150px; margin-left: 5%; " />
+        <img class="logos" src="img/logo.png" alt="Imagen de portada" style="width: 490px; height: 150px; margin-left: 5%; " />
 
     </mat-card-content>
 </mat-card>
@@ -93,10 +93,10 @@
         <mat-card-title id="main_title">
             Session 2
         </mat-card-title>
-        <img class="logos"src="/img/logo_ucb.png" alt="Imagen de portada" style="width: 500px; height: 190px; " />
+        <img class="logos"src="img/logo_ucb.png" alt="Imagen de portada" style="width: 500px; height: 190px; " />
         <br>
         <br>
-        <img class="logos" src="/img/logo.png" alt="Imagen de portada" style="width: 490px; height: 150px; margin-left: 5%; " />
+        <img class="logos" src="img/logo.png" alt="Imagen de portada" style="width: 490px; height: 150px; margin-left: 5%; " />
     </mat-card-content>
     <mat-card-content class="card-content"><iframe class="video"
             src="https://www.youtube.com/embed/d3SUPGYN_QY?si=4IB5o21Y8Ih_b82k" title="YouTube video player"
@@ -116,10 +116,10 @@
         <mat-card-title id="main_title">
             Session 3
         </mat-card-title>
-        <img class="logos"src="/img/logo_ucb.png" alt="Imagen de portada" style="width: 500px; height: 190px; " />
+        <img class="logos"src="img/logo_ucb.png" alt="Imagen de portada" style="width: 500px; height: 190px; " />
         <br>
         <br>
-        <img class="logos" src="/img/logo.png" alt="Imagen de portada" style="width: 490px; height: 150px; margin-left: 5%; " />
+        <img class="logos" src="img/logo.png" alt="Imagen de portada" style="width: 490px; height: 150px; margin-left: 5%; " />
     </mat-card-content>
 </mat-card>
 <mat-card id="section2" class="c2">
@@ -127,10 +127,10 @@
         <mat-card-title id="main_title">
             Session 4
         </mat-card-title>
-        <img class="logos"src="/img/logo_ucb.png" alt="Imagen de portada" style="width: 500px; height: 190px; " />
+        <img class="logos"src="img/logo_ucb.png" alt="Imagen de portada" style="width: 500px; height: 190px; " />
         <br>
         <br>
-        <img class="logos" src="/img/logo.png" alt="Imagen de portada" style="width: 490px; height: 150px; margin-left: 5%; " />
+        <img class="logos" src="img/logo.png" alt="Imagen de portada" style="width: 490px; height: 150px; margin-left: 5%; " />
     </mat-card-content>
     <mat-card-content class="card-content">
         <iframe class="video" src="https://www.youtube.com/embed/CWTMBOuX_B4?si=rl9y0dtLvWDIIyLa"
@@ -150,10 +150,10 @@
         <mat-card-title id="main_title">
             Session 5
     </mat-card-title>
-        <img class="logos"src="/img/logo_ucb.png" alt="Imagen de portada" style="width: 500px; height: 190px; " />
+        <img class="logos"src="img/logo_ucb.png" alt="Imagen de portada" style="width: 500px; height: 190px; " />
         <br>
         <br>
-        <img class="logos" src="/img/logo.png" alt="Imagen de portada" style="width: 490px; height: 150px; margin-left: 5%; " />
+        <img class="logos" src="img/logo.png" alt="Imagen de portada" style="width: 490px; height: 150px; margin-left: 5%; " />
     </mat-card-content>
 
     
