--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,5 +1,5 @@
 <mat-card class="cover-card">
-    <img mat-card-image src="/img/aboutUs_banner.jpg" alt="Imagen de portada" />
+    <img mat-card-image src="img/aboutUs_banner.jpg" alt="Imagen de portada" />
     <mat-card-content>
         <h1>About Us</h1>
     </mat-card-content>
@@ -23,7 +23,7 @@
         </mat-list>
     </mat-card-content>
     <mat-card-content class="card-content">
-        <iframe class="video" src="/video/intro_home.mp4" title="YouTube video player" frameborder="0"
+        <iframe class="video" src="video/intro_home.mp4" title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
         </iframe>
