--- a/src/app/families/families.component.html
+++ b/src/app/families/families.component.html
@@ -1,5 +1,5 @@
 <mat-card class="cover-card">
-    <img mat-card-image src="/img/families.png" alt="Imagen de portada" />
+    <img mat-card-image src="img/families.png" alt="Imagen de portada" />
     <mat-card-content>
         <h1>Family Sponsors</h1>
     </mat-card-content>
