--- a/src/app/virtual/virtual.component.html
+++ b/src/app/virtual/virtual.component.html
@@ -1,5 +1,5 @@
 <mat-card class="cover-card">
-    <img mat-card-image src="img/virtualClasses.jpg" alt="Imagen de portada" />
+    <img mat-card-image src="img/virtual_class.png" alt="Imagen de portada" />
     <mat-card-content>
         <h1>Remote Sessions</h1>
     </mat-card-content>
