adding changes, testimonials, images, buttons, etc, pages transitions

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,5 +1,5 @@
 <mat-card class="cover-card">
-    <img mat-card-image src="img/aboutUs_banner.jpg" alt="Imagen de portada" />
+    <img mat-card-image src="img/ole_miss.jpeg" alt="Imagen de portada" />
     <mat-card-content>
         <h1>About Us</h1>
     </mat-card-content>
