--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -5,20 +5,27 @@
     </mat-card-content>
 </mat-card>
 <mat-card-title id="main_title">
-    Programa Fulbright-Hays
+    Program Fulbright-Hays
 </mat-card-title>
 
 <mat-card id="section2">
     <mat-card-content class="card-content">
         <mat-list>
             <p>
-                The Fulbright-Hays Group-Seminar program in Bolivia is a joint activity organized by the National
-                Coordination of Agreements and International Relations, along with the Institute of Behavioral Sciences
-                (IICC) at the Bolivian Catholic University "San Pablo."
+                The Fulbright-Hays Group Seminar program in Bolivia is a collaborative 
+                initiative organized by the National Coordination of Agreements and 
+                International Relations in partnership with the Bolivian Catholic 
+                University "San Pablo." This program is designed to provide University 
+                of Mississippi students with a unique academic and cultural experience 
+                in Bolivia.
             </p>
             <p>
-                Aimed at students from the University of Mississippi, United States.
-
+                Through this program, participants engage in a range of activities, 
+                including lectures, workshops, and field excursions, that delve into 
+                Bolivia’s rich history, cultural diversity, and pressing social issues. 
+                The initiative aims to foster cross-cultural understanding, enhance 
+                academic knowledge, and strengthen ties between Bolivian and U.S. 
+                institution.
             </p>
         </mat-list>
     </mat-card-content>
@@ -38,13 +45,18 @@
     <mat-card-content class="card-content">
         <!-- matsubtitle -->
         <p>
-            Complementing classroom learning, students will participate in visits to some of Bolivia’s most iconic
-            The Fulbright-Hays Group-Seminar program in Bolivia is a joint activity organized by the National
-            Coordination of Agreements and International Relations, along with the Institute of Behavioral Sciences
-            (IICC) at the Bolivian Catholic University "San Pablo."
+            The program was supported by the Institute of Behavioral Sciences (ICC) 
+            at the Bolivian Catholic University "San Pablo."
         </p>
         <p>
-            Aimed at students from the University of Mississippi, United States.
+            This program offers University of Mississippi students a comprehensive 
+            academic and cultural experience, combining classroom-based learning 
+            with visits to Bolivia’s most iconic locations. Students participate 
+            in lectures and workshops led by expert faculty, gaining insights into 
+            Bolivian culture, history, and social dynamics. These theoretical 
+            lessons are complemented by field excursions that provide real-world 
+            context, fostering a deeper understanding of Bolivia’s rich heritage 
+            and contemporary issues.
         </p>
     </mat-card-content>
 </mat-card>
