--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -152,7 +152,7 @@ University Experience
 </mat-card>
 
 <mat-card-title id="main_title">
-Aditional Information
+Additional Information
 </mat-card-title>
 <mat-card id="section6">
     <mat-card-content class="card-content" >
