--- a/src/app/waliki/waliki.component.html
+++ b/src/app/waliki/waliki.component.html
@@ -12,15 +12,13 @@
     <mat-card-content class="card-content">
         <mat-list>
             <p>
-                The Waliki Friends network is comprised of UCB students who have participated in the Student Mobility
-                Program abroad, who, under the values of solidarity and reciprocity, offer support to students coming to
-                Bolivia from abroad.
-
+                The Waliki Friends network, formed by UCB students who have participated in the Student Mobility Program abroad, 
+                is driven by the values of solidarity and reciprocity. Its mission is to provide comprehensive support to 
+                international students arriving in Bolivia.
             </p>
             <p>
-                The Waliki Friends network, comprised of UCB students who have participated in the Student Mobility
-                Program abroad, is guided by the values of solidarity and reciprocity to support incoming international
-                students.
+                This network organizes various activities throughout the semester to promote cultural immersion and foster 
+                meaningful exchanges between international students and the local community.
             </p>
         </mat-list>
     </mat-card-content>
@@ -50,15 +48,10 @@
     <mat-card-content class="card-content">
         <mat-list>
             <p>
-                Students will meet and learn about the kallawayas, traditional healers in Bolivia who use plants to heal
-                people. This will help students understand Andean medicine and how it's still important to many
-                communities in Bolivia.
-
-            </p>
-            <p>
-                Students will get to know the kallawayas, traditional healers who travel around Bolivia using plants to
-                heal people. This experience will help students learn about Andean medicine and its connection to
-                culture and spirituality.
+                Students will have the opportunity to meet and learn from the Kallawayas, traditional healers in Bolivia 
+                renowned for their use of medicinal plants to treat illnesses. Through this experience, students will 
+                gain a deeper understanding of Andean medicine, its cultural and spiritual significance, and its enduring 
+                importance to many Bolivian communities.
             </p>
         </mat-list>
     </mat-card-content>
