--- a/src/app/classes/classes.component.html
+++ b/src/app/classes/classes.component.html
@@ -5,18 +5,16 @@
     </mat-card-content>
 </mat-card>
 <mat-card-title id="main_title">
-    Programa Fulbright-Hays
+    Program Fulbright-Hays
 </mat-card-title>
 <mat-card id="section2" class="c1">
     <mat-card-content class="card-content">
         <mat-list>
             <p>
-                Students embark on excursions to important Bolivian locations including the Salar de Uyuni, Madidi
-                National Park, Potosí, and Lake Titicaca, blending tourism with academic study.
-            </p>
-            <p>
-                Students visit cool places in Bolivia like the Salar de Uyuni, Madidi National Park, Potosí, and Lake
-                Titicaca, combining fun and learning.
+                Students embark on immersive excursions to iconic Bolivian destinations such as the Salar de Uyuni, 
+                Madidi National Park, Potosí, and Lake Titicaca. These experiences seamlessly blend tourism with 
+                academic exploration, allowing students to enjoy Bolivia’s breathtaking landscapes while deepening 
+                their understanding of its cultural, historical, and environmental significance.
             </p>
         </mat-list>
     </mat-card-content>
@@ -33,13 +31,13 @@
     <mat-card-content class="card-content">
         <!-- matsubtitle -->
         <p>
-            In workshops led by expert faculty, students tackle topics such as health, politics, and community-based
-            research. These workshops allow students to apply their theoretical knowledge to real-world situations,
-            contributing to a deeper understanding of Bolivian reality.
+            In workshops led by expert faculty, students explore critical topics such as public health, politics, and 
+            community-based research. These interactive sessions provide students with hands-on experience, enabling 
+            them to apply theoretical knowledge to real-world challenges.
         </p>
         <p>
-            Students get hands-on experience in workshops led by experts on topics like health, politics, and community
-            research, which helps them understand Bolivia better.
+            Through this practical approach, students gain valuable insights into the complexities of Bolivian society, 
+            fostering a deeper and more nuanced understanding of its realities and cultural context.
         </p>
     </mat-card-content>
 </mat-card>
