--- a/src/app/virtual/virtual.component.html
+++ b/src/app/virtual/virtual.component.html
@@ -38,7 +38,7 @@
 
 <mat-card id="section3" class="c1">
     <mat-card-content class="card-content">
-        <img src="img/tihuanaku_aboutUs.jpg" alt="Image" class="img1">
+        <img src="img/virtua_class1.png" alt="Image" class="img1">
     </mat-card-content>
     <mat-card-content class="card-content">
         <!-- matsubtitle -->
@@ -71,7 +71,7 @@
 
     </mat-card-content>
     <mat-card-content class="card-content">
-        <img src="img/aboutUs_Potosi.jpg" alt="Image" class="img1">
+        <img src="img/virtual_class2.png" alt="Image" class="img1">
     </mat-card-content>
 </mat-card>
 <!-- virtual classes  -->
@@ -86,10 +86,10 @@
         <mat-card-title id="main_title">
             Session 1
         </mat-card-title>
-        <img class="logos"src="img/logo_ucb.png" alt="Imagen de portada" style="width: 500px; height: 190px; " />
+        <img class="logos"src="img/logo_ucbb.png" alt="Imagen de portada" style="width: 410px; height: 170px; margin-left: 4%;"  />
         <br>
         <br>
-        <img class="logos" src="img/logo.png" alt="Imagen de portada" style="width: 490px; height: 150px; margin-left: 5%; " />
+        <img class="logos" src="img/univmiss.webp" alt="Imagen de portada" style="width: 510px; height: 150px; margin-left: 4%; " />
 
     </mat-card-content>
 </mat-card>
@@ -98,10 +98,10 @@
         <mat-card-title id="main_title">
             Session 2
         </mat-card-title>
-        <img class="logos"src="img/logo_ucb.png" alt="Imagen de portada" style="width: 500px; height: 190px; " />
+        <img class="logos"src="img/logo_ucb.png" alt="Imagen de portada" style="width: 540px; height: 190px;" />
         <br>
         <br>
-        <img class="logos" src="img/logo.png" alt="Imagen de portada" style="width: 490px; height: 150px; margin-left: 5%; " />
+        <img class="logos" src="img/logo.png" alt="Imagen de portada" style="width: 510px; height: 150px; margin-left: 5%; " />
     </mat-card-content>
     <mat-card-content class="card-content"><iframe class="video"
             src="https://www.youtube.com/embed/d3SUPGYN_QY?si=4IB5o21Y8Ih_b82k" title="YouTube video player"
@@ -121,10 +121,10 @@
         <mat-card-title id="main_title">
             Session 3
         </mat-card-title>
-        <img class="logos"src="img/logo_ucb.png" alt="Imagen de portada" style="width: 500px; height: 190px; " />
+        <img class="logos"src="img/logo_ucbb.png" alt="Imagen de portada" style="width: 410px; height: 170px; margin-left: 4%;"  />
         <br>
         <br>
-        <img class="logos" src="img/logo.png" alt="Imagen de portada" style="width: 490px; height: 150px; margin-left: 5%; " />
+        <img class="logos" src="img/univmiss.webp" alt="Imagen de portada" style="width: 510px; height: 150px; margin-left: 4%; " />
     </mat-card-content>
 </mat-card>
 <mat-card id="section2" class="c2">
@@ -132,10 +132,10 @@
         <mat-card-title id="main_title">
             Session 4
         </mat-card-title>
-        <img class="logos"src="img/logo_ucb.png" alt="Imagen de portada" style="width: 500px; height: 190px; " />
+        <img class="logos"src="img/logo_ucb.png" alt="Imagen de portada" style="width: 540px; height: 190px;" />
         <br>
         <br>
-        <img class="logos" src="img/logo.png" alt="Imagen de portada" style="width: 490px; height: 150px; margin-left: 5%; " />
+        <img class="logos" src="img/logo.png" alt="Imagen de portada" style="width: 510px; height: 150px; margin-left: 5%; " />
     </mat-card-content>
     <mat-card-content class="card-content">
         <iframe class="video" src="https://www.youtube.com/embed/CWTMBOuX_B4?si=rl9y0dtLvWDIIyLa"
@@ -150,15 +150,15 @@
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </mat-card-content>
+    </mat-card-content >
     <mat-card-content class="card-content">
         <mat-card-title id="main_title">
             Session 5
     </mat-card-title>
-        <img class="logos"src="img/logo_ucb.png" alt="Imagen de portada" style="width: 500px; height: 190px; " />
-        <br>
-        <br>
-        <img class="logos" src="img/logo.png" alt="Imagen de portada" style="width: 490px; height: 150px; margin-left: 5%; " />
+    <img class="logos"src="img/logo_ucbb.png" alt="Imagen de portada" style="width: 410px; height: 170px; margin-left: 4%;"  />
+    <br>
+    <br>
+    <img class="logos" src="img/univmiss.webp" alt="Imagen de portada" style="width: 510px; height: 150px; margin-left: 4%; " />
     </mat-card-content>
 
     
