--- a/src/styles.scss
+++ b/src/styles.scss
@@ -197,15 +197,17 @@ body{
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 8px 12px;
+
+    font-size: 0.8rem;
     border-radius: 5px;
-    font-size: 1em;
+    font-size: 1.0rem;
     z-index: 10; 
 } 
 
 #section5 {
-    margin-top: 3%;
+    margin-top: 5%;
     padding-bottom: 7%;
-    height: 550px;
+    height: 850px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -250,8 +252,9 @@ body{
     }
 }
 #section6 {
-    margin: 2%;
-    padding: 2%;
+    
+    margin: 6%;
+
     display: grid; /* Usamos Grid Layout */
     grid-template-columns: repeat(2, 1fr); /* Dos columnas en pantallas grandes */
     gap: 20px; /* Espaciado entre las columnas */
