adding some changes

--- a/src/app/waliki/waliki.component.html
+++ b/src/app/waliki/waliki.component.html
@@ -1,6 +1,6 @@
 <p>waliki works!</p>
 <mat-card class="cover-card">
-    <img mat-card-image src="/img/walikibanner.jpg" alt="Imagen de portada" />
+    <img mat-card-image src="img/walikibanner.jpg" alt="Imagen de portada" />
     <mat-card-content>
         <h1>Waliki Friends</h1>
     </mat-card-content>
